@@ -5,6 +5,8 @@ Changes for Crate
 Unreleased
 ==========
 
+ - Optimized queries that use ``IN`` or ``ANY`` on fields of type ``string``
+
  - Fix: Option http.enabled=false caused UDC module to crash on startup
 
  - Optimized retry logic in bulk and COPY operations to handle
